---
source: crates/utils/src/wasm_tools.rs
expression: imports
---
{
  "obelisk:types/join-set@6.0.0.[method]join-set.id": {
    "ffqn": "obelisk:types/join-set@6.0.0.[method]join-set.id",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "self",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "string",
        "wit_type": "string"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@7.0.0.join-set-create": {
    "ffqn": "obelisk:workflow/workflow-support@7.0.0.join-set-create",
    "parameter_types": [],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "own",
        "wit_type": "join-set"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:http-obelisk-ext/http-get.get-successful-await-next": {
    "ffqn": "testing:http-obelisk-ext/http-get.get-successful-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<string, string>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<string, string>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:http-obelisk-ext/http-get.get-successful-submit": {
    "ffqn": "testing:http-obelisk-ext/http-get.get-successful-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<record { id: string }, variant { function-not-found, type-check-error(string), value-too-large(u64) }>",
        "wit_type": "result<execution-id, child-execution-request-error>"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:http/http-get.get": {
    "ffqn": "testing:http/http-get.get",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:http/http-get.get-resp": {
    "ffqn": "testing:http/http-get.get-resp",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "record { body: list<u8>, status-code: u16 }",
          "err": "string"
        },
        "wit_type": "result<response, string>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:http/http-get.get-successful": {
    "ffqn": "testing:http/http-get.get-successful",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": false
  }
}
